# random-quote-generator

./: LICENSE  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
