[tool.poetry]
name = "random-quote-generator-9308"
packages = [
    { include = "random_quote_generator" },
]
version = "0.1.0"
description = ""
authors = ["Michael Herman <hermanmu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
safety = "^1.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
